<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
    </data>
    <!-- ConstraintLayout is used due to complexity of views arrangement -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/codGray">

        <!-- Shoe type or name (label & entry) -->
        <TextView
            android:id="@+id/shoeName_label"
            style="@style/labelsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin_from_parent"
            android:layout_marginEnd="@dimen/button_margin_from_parent"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <EditText
            android:id="@+id/shoeName_entry"
            style="@style/inputTextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin_from_parent"
            android:layout_marginEnd="@dimen/button_margin_from_parent"
            android:hint="@string/shoe_name_entry_hint"
            android:text="@={shoeViewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeName_label" />

        <!-- Shoes company (label & entry) -->
        <TextView
            android:id="@+id/shoeCompany_label"
            style="@style/labelsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin_from_parent"
            android:layout_marginTop="@dimen/button_margin_from_parent"
            android:layout_marginEnd="@dimen/button_margin_from_parent"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeName_entry" />

        <EditText
            android:id="@+id/shoeCompany_entry"
            style="@style/inputTextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin_from_parent"
            android:layout_marginEnd="@dimen/button_margin_from_parent"
            android:hint="@string/company_hint"
            android:text="@={shoeViewModel.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeCompany_label" />
        <!-- Shoe size (label & entry) -->
        <TextView
            android:id="@+id/shoeSize_label"
            style="@style/labelsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin_from_parent"
            android:layout_marginTop="@dimen/button_margin_from_parent"
            android:layout_marginEnd="@dimen/button_margin_from_parent"
            android:text="@string/shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeCompany_entry" />

        <EditText
            android:id="@+id/shoeSize_entry"
            style="@style/inputTextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin_from_parent"
            android:layout_marginEnd="@dimen/button_margin_from_parent"
            android:hint="@string/shoe_size_hint"
            android:inputType="numberDecimal"
            android:text="@={``+ shoeViewModel.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeSize_label" />

        <!-- Description (label & entry) -->
        <TextView
            android:id="@+id/description_label"
            style="@style/labelsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin_from_parent"
            android:layout_marginTop="@dimen/button_margin_from_parent"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeSize_entry" />

        <EditText
            android:id="@+id/description_entry"
            style="@style/inputTextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_margin_from_parent"
            android:layout_marginEnd="@dimen/button_margin_from_parent"
            android:hint="@string/description_hint"
            android:text="@={shoeViewModel.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_label" />
        <!-- Clicking this button will navigate to shoes list screen along with saving the created shoes data -->
        <Button
            android:id="@+id/save"
            style="@style/buttonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_from_parent"
            android:onClick="@{()->shoeViewModel.saveShoe()}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_entry" />

        <!-- Clicking this button to return to shoes list -->
        <Button
            android:id="@+id/cancel"
            style="@style/buttonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save"
            app:layout_constraintVertical_bias="0.3"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="592dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>